add workflow_dispatch manual action run

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,6 +8,7 @@ name: Build img-mcrouter
 on:
   schedule:
     - cron: '0 12 * * 1'
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
